cleaned assets. favicon in place. animations basically working. needs spacing and animation fixes then finished, possible illustrations as well

--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,4 @@
 @font-face {
-  font-family:"MPLUS1p";
-  src: url("assets/MPLUS1p-Light.ttf") format("truetype");
-}
-
-@font-face {
-  font-family:"SilkSerif";
-  src: url("assets/SilkSerif-Medium.ttf") format("truetype");
-}
-
-@font-face {
   font-family:"Manofa-Regular";
   src: url("assets/Manofa-Regular.ttf") format("truetype");
 }
@@ -16,7 +6,6 @@
 html, body {
 	height: 100%;
 	background-color: #bdafb0;
-    font-family: MPLUS1p;
     font-family: Manofa-Regular;
 }
 
@@ -29,31 +18,31 @@ html, body {
 
 #dot1 {
     background: #572124;
-    top:0;
-    left:0;
+    top:75%;
+    left:6.7%;
     transform: translate(-50%, -50%);
 }
 
 #dot2 {
     background: #b45859;
     top: 0;
-    left: 100%;
+    left: 50%;
     transform: translate(-50%, -50%);
 }
 
 #dot3 {
     background: #8d4242;
-    top: 100%;
-    left: 50%;
+    top: 75%;
+    left: 93.3%;
     transform: translate(-50%, -50%);
 }
 
 .dot-rest {
 	background-color: white;
-	width: 30px;
-	height: 30px;
+	width: 27px;
+	height: 27px;
 	top: 0%;
-	left: 100%;
+	left: 50%;
     transform: translate(-50%, -50%);
 }
 
@@ -72,25 +61,21 @@ html, body {
     position:absolute;
     top:50px;
     left:50px;
-    background-color: black;
     transition: transform 1s;
     transition-timing-function: ease-in;
 }
 
 .sun-one {
-    -webkit-animation-iteration-count:1;
-    -webkit-animation-timing-function:linear;
-    -webkit-animation-name:orbit;
-    -webkit-animation-duration:1s;
+	transform:rotate(0deg);
 }
 
 .sun-two {
-	-webkit-transform:rotate(90deg)
+	transform:rotate(120deg);
 }
 
-@-webkit-keyframes orbit {
-from { -webkit-transform:rotate(0deg) } 
-to { -webkit-transform:rotate(360deg) } }
+.sun-three {
+	transform:rotate(240deg);
+}
 
 .hidden {
 	display: none;
@@ -113,41 +98,37 @@ to { -webkit-transform:rotate(360deg) } }
     margin-top: 75px;
 }
 
+@keyframes textAppear {
+  0%   {color: #bdafb0;}
+  50%  {color: #bdafb0;}
+  100% {color: white;}
+}
+
 #content-wrapper {
 	position: relative;
-/*	background-image: url(assets/IMG_0551.jpg);
-	background-size: 1000px;*/
     width: 50vw;
     color: white;
     height: 50vh;
     text-align: center;
+	animation-name: textAppear;
+  	animation-duration: 2s;
 }
 
 #contact-wrapper {
 	text-align: center;
     margin-top: -18px;
     z-index: 100;
-    font-size: 26px;
+    font-size: 20px;
     color: white;
+	animation-name: textAppear;
+  	animation-duration: 2s;
 }
 
-#next-button-wrapper {
-    position: absolute;
-    bottom: 10px;
-    color: white;
-    right: 20px;
-    border: 1px solid white;
-    padding: 5px;
-    font-weight: 800;
-}
+@media only screen and (max-width: 600px) {
+  #content-wrapper  {
+    width: 80vw;
+  }
 
-#next-button {
-    position: absolute;
-    bottom: 10px;
-    color: white;
-    right: 20px;
-    border: 1px solid white;
-    padding: 5px;
-    font-weight: 800;	
+  #contact-wrapper {
+    font-size: 18px;
 }
-
